oxiplate-derive/tests/broken/for/for-self.stderr
error[E0424]: expected unit struct, unit variant or constant, found local variable `self`
 --> tests/broken/for/for-self.rs:4:28
  |
4 | #[oxiplate_inline("{%- for self in numbers -%}{{ self }}{% endfor %}")]
  |                            ^^^^ `self` value is a keyword and may not be bound to variables or shadowed
